--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -1,6 +1,6 @@
 <form id="form-content" name="FormContent" ng-submit="addPost(FormContent, form)" novalidate>
     <center>
-        <h3>Thêm mẫu dữ liệu địa chất > {{maDeTai}}</h3>
+        <h3>Thêm mẫu dữ liệu địa chất > Đề tài: {{maDeTai}}</h3>
     </center>
     <div class="container-fluid">
         <ul class="nav nav-tabs group tabs">
